Changed -w to dmenu window width (centered on monitor)

--- a/dmenu.1
+++ b/dmenu.1
@@ -21,7 +21,7 @@ dmenu \- dynamic menu
 .RB [ \-sf
 .IR color ]
 .RB [ \-w
-.IR windowid ]
+.IR width ]
 .P
 .BR dmenu_run " ..."
 .SH DESCRIPTION
@@ -78,8 +78,8 @@ defines the selected foreground color.
 .B \-v
 prints version information to stdout, then exits.
 .TP
-.BI \-w " windowid"
-embed into windowid.
+.BI \-w " width"
+sets the width of the dmenu window.
 .SH USAGE
 dmenu is completely controlled by the keyboard.  Items are selected using the
 arrow keys, page up, page down, home, and end.
